syntax="proto3";

package proto;

option go_package = "github.com/famesensor/playground-go-grpc/proto/auth";

message SignInReq {
    string username = 1;
    string password = 2;
}
